--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
 					<h1>Docker Intro</h1>
-					<h3>2019</h3>
+					<h3>hasp@litec.ac.at</h3>
 					<p>
 						<small>Sperlhof, Windischgarsten</small>
 					</p>
