--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
 			<section>
-				<h1>Docker Introdcution</h1>
+				<h1>Docker Introduction</h1>
 				<h3>Containerization & Microservices</h3>
 				<p>
 					<small><a href="https://github.com/litec-hasp/">Peter Haslinger</a></small>
